--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL=https://training.tamkeen-dev.com/termc/public/api
+VITE_BASE_URL=https://sanad.tamkeen-dev.com/api
 VITE_PORT=5173
 VITE_JWT_SECRET_KEY=your-secret-key
